--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>arenamaster</groupId>
-  <artifactId>arenamaster-backend</artifactId>
+  <groupId>collective</groupId>
+  <artifactId>collective-backend</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>arenamaster-backend Maven Webapp</name>
+  <name>collective-backend Maven Webapp</name>
   <url>http://maven.apache.org</url>
       <parent>
         <groupId>org.springframework.boot</groupId>
@@ -16,14 +16,15 @@
       <dependency>
          <groupId>org.mybatis</groupId>
          <artifactId>mybatis</artifactId>
-         <version>3.3.0</version>
+         <version>3.5.4</version>
       </dependency>	
 	 
-      <dependency>
-         <groupId>mysql</groupId>
-         <artifactId>mysql-connector-java</artifactId>
-         <version>8.0.14</version>
-      </dependency>
+<dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>42.2.12</version>
+</dependency>
+
   
     <dependency>
       <groupId>junit</groupId>
