--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,11 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
-<filter>
+  <context-param>
+    <param-name>your_param</param-name>
+    <param-value>your_param_value</param-value>
+  </context-param>
+	<filter>
   <filter-name>CorsFilter</filter-name>
   <filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
   <init-param>
@@ -32,6 +36,10 @@
   <filter-name>CorsFilter</filter-name>
   <url-pattern>*</url-pattern>
 </filter-mapping>
+   <!-- ... -->
+  <listener>
+    <listener-class>com.your.package.ServletContextClass</listener-class>
+  </listener>
  <servlet>
     <servlet-name>jersey-servlet</servlet-name>
     <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
@@ -44,5 +52,5 @@
   <servlet-mapping>
 	<servlet-name>jersey-servlet</servlet-name>
 	<url-pattern>/api/*</url-pattern>
-  </servlet-mapping>  
+  </servlet-mapping>
 </web-app>
