--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,6 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-		<finalName>arenamaster-backend</finalName>
+		<finalName>collective-backend</finalName>
 	</build>
 </project>
