--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,11 @@
-<!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN" "http://java.sun.com/dtd/web-app_2_3.dtd" >	<web-app>
-<display-name>ArchetypeCreatedWebApplication</display-name>
-<filter>
-	<filter-name>CorsFilter</filter-name>
-	<filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
+<!DOCTYPE web-app PUBLIC 
+	"-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+	 "http://java.sun.com/dtd/web-app_2_3.dtd" >	
+<web-app>
+	<display-name>ArchetypeCreatedWebApplication</display-name>
+	<filter>
+		<filter-name>CorsFilter</filter-name>
+		<filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
 	<init-param>
 		<param-name>cors.allowed.origins</param-name>
 		<param-value>*</param-value>
@@ -28,9 +31,6 @@
 	<filter-name>CorsFilter</filter-name>
 	<url-pattern>*</url-pattern>
 </filter-mapping>
-	<listener>
-		<listener-class>com.your.package.ServletContextClass</listener-class>
-	</listener>
 	<servlet>
 		<servlet-name>jersey-servlet</servlet-name>
 		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
