--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,10 @@
     <version>0.11.2</version>
     <scope>runtime</scope>
 </dependency>
+<dependency>
+<groupId>javax.servlet</groupId>
+<artifactId>javax.servlet-api</artifactId>
+</dependency>
 	</dependencies>
 	<build>
 		<plugins>
